adjust to use search instead. add date as parameter to limit and collect upload date in items received